With DB to iterate over Colllection.

--- a/MauiApp2/MauiApp2.csproj
+++ b/MauiApp2/MauiApp2.csproj
@@ -49,22 +49,53 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <Compile Remove="Services\IDbservice.cs" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Remove="Mydata.db" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<PackageReference Include="CommunityToolkit.Maui" Version="5.0.0" />
 		<PackageReference Include="CommunityToolkit.Maui.Core" Version="5.0.0" />
-		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.1.0" />
+		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.0-preview2" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0-preview.3.23174.8" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
 		<PackageReference Include="MvvmCross.Plugin.BLE" Version="3.0.0-beta.2" />
 		<PackageReference Include="Plugin.BLE" Version="3.0.0-beta.2" />
 		<PackageReference Include="Plugin.BluetoothLE" Version="6.3.0.19" />
+		<PackageReference Include="Refractored.MvvmHelpers" Version="1.6.2" />
+		<PackageReference Include="sqlite-net-pcl" Version="1.9.141-beta" />
+		<PackageReference Include="SQLiteNetExtensionsAsyncUpdate" Version="2.1.2" />
+		<PackageReference Include="Syncfusion.Maui.ProgressBar" Version="20.4.54" />
+		<PackageReference Include="XamarinFormsComponents.Core" Version="2.2.0" />
 	</ItemGroup>
 
 	<ItemGroup>
+	  <Compile Update="Pages\Formulaa.xaml.cs">
+	    <DependentUpon>Formulaa.xaml</DependentUpon>
+	  </Compile>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <MauiXaml Update="Pages\Batches.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Pages\Data.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Pages\Formulaa.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Pages\Home.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Pages\Ingredients.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	</ItemGroup>
+
+	<ProjectExtensions><VisualStudio><UserProperties XamarinHotReloadDebuggerTimeoutExceptionMauiApp2HideInfoBar="True" /></VisualStudio></ProjectExtensions>
 
 </Project>
